@@ -1,0 +1,4 @@
+CC=gcc-min
+all : acsplit acmerge
+clean :
+	rm -f acsplit acmerge *.o core
